fix #289:- Extra padding in the bottom of footer

--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ footer {
     width: 100%;
     box-shadow: 0px -2.5px 6px rgb(30, 30, 30);
     min-height: 100px;
-    padding: 20px 50px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -471,7 +471,6 @@ footer p {
     color: var(--secondary);
     text-align: center;
     margin-top: 15px;
-    margin-bottom: 10px;
     font-size: 1.1em;
     display: inline-block;
 }
